syntax = "proto3";
import "google/protobuf/timestamp.proto";
package mondane.checkmanager;

option go_package = "github.com/shaardie/mondane/checkmanager/proto";

service CheckManagerService {
    rpc GetHTTPCheck(Id) returns (HTTPCheck);
    rpc GetHTTPCheckByUser(Id) returns (HTTPChecks);
    rpc CreateHTTPCheck(HTTPCheck) returns (Id);
    rpc UpdateHTTPCheck(HTTPCheck) returns (Response);
    rpc DeleteHTTPCheck(Id) returns (Response);
    rpc GetHTTPCheckResultsByCheck(Id) returns (HTTPResults);
}

message Id {
    int64 id = 1;
}

message Response {}

message HTTPCheck {
    int64 id = 1;
    int64 user_id = 2;
    string url = 3;
}

message HTTPChecks {
    repeated HTTPCheck checks = 1;
}

message HTTPResult {
    int64 id = 1;
    int64 check_id = 2;
    google.protobuf.Timestamp timestamp = 3;
    bool success = 4;
    int64 status_code = 5;
    int64 duration = 6;
    string error = 7;
}

message HTTPResults {
    repeated HTTPResult results = 1;
}
